[gd_scene format=3 uid="uid://b3nycsqop7i6w"]

[ext_resource type="Script" uid="uid://cd2s3aa7yd3on" path="res://ui/main_menu.gd" id="1_script"]

[node name="MainMenu" type="Control" unique_id=1012200700]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="." unique_id=972719799]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1467899576]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1580921003]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1711773743]
layout_mode = 2
text = "BATTLE ROYALE"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1859657078]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Host Game"

[node name="JoinContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer" unique_id=1330494169]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IPInput" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinContainer" unique_id=1098826940]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
placeholder_text = "IP Address (e.g. 127.0.0.1)"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/JoinContainer" unique_id=329918424]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Join"

[node name="SinglePlayerButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=562348018]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Single Player"

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=458152300]
layout_mode = 2
horizontal_alignment = 1
